sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:19: error: not found: value c
    c match{
    ^